fixed skill cutoff issues

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -14,6 +14,7 @@ ul {
 
 .icons .icon {
   font-size: 6rem;
+  height: fit-content;
 }
 
 @media screen and (max-width: 400px) {
